# renku-cli

./: .dockerignore  .gitignore  .mergify.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  flake.nix  install.sh  mkdocs.sh  musl.Dockerfile
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish-docker-image.yml  publish.yml
docs/: index.md  install.md
docs/project/: clone.md
src/: cli.rs  config.rs  data.rs  error.rs  httpclient.rs  lib.rs  main.rs  project_config.rs  util.rs
src/cli/: cmd.rs  complete.rs  opts.rs  sink.rs
src/cli/cmd/: dataset.rs  job.rs  login.rs  logout.rs  project.rs  shell_completion.rs  update.rs  userdoc.rs  version.rs
src/cli/cmd/dataset/: deposit.rs  zenodo.rs  zenodo_api.rs
src/cli/cmd/job/: list.rs  logs.rs  start.rs  stop.rs
src/cli/cmd/project/: clone.rs
src/data/: project_id.rs  renku_url.rs  simple_message.rs  submission_id.rs
src/httpclient/: auth.rs  cache.rs  data.rs  keystore.rs  proxy.rs
src/util/: data.rs  file.rs  strings.rs
tests/: version.rs
tests/common/: mod.rs
