[package]
name = "rnk"
description = "A command line interface to the Renku platform"
homepage = "https://renkulab.io/"
version = "0.1.0-nightly"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SwissDatascienceCenter/renku-cli"
keywords = [ "renku", "cli" ]
categories = [ "command-line-utilities" ]
build = "build.rs"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive", "wrap_help"] }
clap_complete = "4.5.13"
console = {version = "0.15.8"}
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }
openssl = { version = "0.10.64", optional = true }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
snafu = { version = "0.8.5" }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
regex = { version = "1.10.6" }
iso8601-timestamp = { version = "0.2.17" }
toml = { version = "0.8.19" }
git2 = { version = "0.19.0", default-features = false, features = [ "vendored-libgit2" ]}
url = { version = "2.5.1" }
openidconnect = { version = "3.5.0", default-features = false, features = [ "reqwest" ] }
directories = { version = "5.0" }
comrak = { version = "0.28.0", optional = true }

[features]
default = ["reqwest/default-tls"] # link against system library
rustls = ["reqwest/rustls-tls", "openidconnect/rustls-tls"] # include rustls, ssl library written in rust
vendored-openssl = ["openssl/vendored"] # include compiled openssl library
user-doc = [ "dep:comrak" ]

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"

[build-dependencies]
vergen = { version = "8.3.2", features = ["build", "git", "gitcl", "rustc", "cargo"] }
