[package]
name = "rnk"
description = "A command line interface to the Renku platform"
homepage = "https://renkulab.io/"
edition = "2024"
resolver = "3"
license = "Apache-2.0"
repository = "https://github.com/SwissDatascienceCenter/renku-cli"
keywords = ["renku", "cli"]
categories = ["command-line-utilities"]
build = "build.rs"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.5.61", features = ["unstable-dynamic"] }
console = { version = "0.15.11" }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }
openssl = { version = "0.10.75", optional = true }
rand = { version = "0.8" }
reqwest = { version = "0.12.28", default-features = false, features = [
  "json",
  "multipart",
  "stream",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
snafu = { version = "0.8.5" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
walkdir = "2"
tabled = "0.20.0"
chrono = "0.4.43"
futures = { version = "0.3" }
regex = { version = "1.12.3" }
regex-macro = { version = "0.3.0" }
iso8601-timestamp = { version = "0.2.17" }
toml = { version = "0.8.19" }
git2 = { version = "0.19.0", default-features = false, features = [
  "vendored-libgit2",
  "https",
  "ssh",
] }
url = { version = "2.5.1" }
oauth2 = { version = "4.4.2" }
openidconnect = { version = "3.5.0", default-features = false, features = [
  "reqwest",
] }
directories = { version = "5.0" }
comrak = { version = "0.28.0", optional = true }
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
better-panic = "0.3.0"
human-panic = "2.0.6"
libc = "0.2.183"
self_update = { version = "0.43.1", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
] }
md5 = "0.8.0"
ulid = "1.2.1"
keyring-core = {version = "1.0.0", features = ["sample"]}
uzers = "0.12"

# [target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"


# [target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
db-keystore = { version = "0.4.3" }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { version = "1.0.0" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
#dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust", "vendored"] }
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }



[features]
default = ["reqwest/default-tls"] # link against system library
rustls = [
  "reqwest/rustls-tls",
  "openidconnect/rustls-tls",
  "self_update/rustls",
] # include rustls, ssl library written in rust
vendored-openssl = ["openssl/vendored"] # include compiled openssl library
vendored-zlib = [
  "git2/zlib-ng-compat",
] # without this feature wherever the cli is installed needs to have zlib.so
user-doc = ["dep:comrak"]

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"

[build-dependencies]
vergen = { version = "8.3.2", features = [
  "build",
  "git",
  "gitcl",
  "rustc",
  "cargo",
] }

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = true
